--- a/libraly-app/src/index.css
+++ b/libraly-app/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header_text {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+  color: black;
+  font-size: 32px;
+  text-align: center;
+  margin: 0;
+}
